fully responsive web design

--- a/index.html
+++ b/index.html
@@ -13,13 +13,38 @@
     </head>
     <body class="container">
         <div class="sidebar">
-            sidebar
+            <div class="lines"></div>
         </div>
         <header class="header">
-            header
+            <img src="img/logo.png" alt="logo" class="header__logo">
+            <h3 class="heading-3 heading-3--light">your own home</h3>
+            <h1 class="heading-1">The ultimate personal freedom</h1>
+            <button class="btn header__btn">view our properties</button>
+            <div class="header__seen">Seen on</div>
+            <div class="header__seen-logo">
+                <img src="img/logo-bbc.png" alt="logo">
+                <img src="img/logo-forbes.png" alt="logo">
+                <img src="img/logo-techcrunch.png" alt="logo">
+                <img src="img/logo-bi.png" alt="logo">
+            </div>
         </header>
         <div class="realtors">
-            Top 3 realtors
+            <div class="heading-3 heading-3--light realtors__heading">top 3 realtors</div>
+            <div class="realtor">
+                <img src="img/realtor-1.jpeg" alt="realtors" class="realtor__img">
+                <div class="heading-4 heading-4--light realtor__name">Erik Feinman</div>
+                <p class="realtor__paragraph">245 houses sold</p>
+            </div>
+            <div class="realtor">
+                <img src="img/realtor-2.jpeg" alt="realtors realtor__name" class="realtor__img">
+                <div class="heading-4 heading-4--light">Kim Brown</div>
+                <p class="realtor__paragraph">212 houses sold</p>
+            </div>
+            <div class="realtor">
+                <img src="img/realtor-3.jpeg" alt="realtors" class="realtor__img">
+                <div class="heading-4 heading-4--light realtor__name">Toby Ramsey</div>
+                <p class="realtor__paragraph">198 houses sold</p>
+            </div>
         </div>
         <section class="features">
             <div class="feature">
@@ -321,6 +346,9 @@
                 <li class="nav__list"><a href="#" class="nav__link"></a>submit your property</li>
                 <li class="nav__list"><a href="#" class="nav__link"></a>work with us!</li>
             </ul>
+            <p class="footer__paragraph">
+                &copy; Copyright from jonas tutorial and i believe this course is awasome you must learn from it.
+            </p>
         </footer>
     </body>
 </html>
